last update - project BMS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseñador Web Jr. Francisco Javier Vera Bocanegra</title>
+    <title>Desarrollador Web Jr. Francisco Javier Vera Bocanegra</title>
     <link rel="icon" type="image/jpg" href="./img/icono.png">
     <meta name="description" content="Página Web Personal">
     <!--Iconos-->
@@ -306,9 +306,18 @@
                 <h2 class="subtitulo">Portafolio</h2>
                 <div class="portafolio">
                     <div class="proyecto animado">
+                        <i class="fa fa-graduation-cap proyecto__icono"></i>
+                        <h3>Brilliant Mind's School</h3>
+                        <p>Como parte de un proyecto del tipo Freelance, tuve la oportunidad de participar en el rediseño de una página web para una escuela del país de Honduras, en el que mi rol fue llevar a cabo todo el diseño del nuevo sitio de principio a fin, cabe resaltar que solo me ocupe del diseño (Front-End). Tuve un lider de proyecto que estuvo constantemente evaluando mi trabajo y proporsionando consejos para el rpoyecto. Esto se logro en 10 días hábiles. Sin embargo, a raíz de este proyecto considero puedo ir reduciendo tiempos al menos en cuestion del diseño y la parte visual de un sitio web.</p>
+                        <div class="proyecto__enlaces">
+                            <i class="fa fa-link"><a href="https://github.com/Frank420-Developer/Brilliant-Minds-School" target="_blank">Enlace al repositorio en GitHub</a></i>
+                            <i class="fa fa-link"><a href="https://brilliantmindsschool.000webhostapp.com" target="_blank">Enlace al Sitio Web Terminado</a></i>
+                        </div>
+                    </div>
+                    <div class="proyecto animado">
                         <i class="fa fa-medkit proyecto__icono"></i>
                         <h3>Proyecto "Sistema de control de ventas para Farmacia"</h3>
-                        <p>Este proyecto es el más reciente, actualmente se encuentra en desarrollo y de momento se ha realizado alrededor del 10% del mismo. Esta siendo desarrollado con HTML5, CSS, JAVASCRIPT en 
+                        <p>Este proyecto es el más reciente, actualmente se encuentra en desarrollo y de momento se ha realizado alrededor del 30% del mismo. Esta siendo desarrollado con HTML5, CSS, JAVASCRIPT en 
                         Visual Studio, se utilizará tambien bases de datos SQL, PHP y modelo MVC para la parte de obtener y mostrar datos, así mismo realizara el CRUD en todas las secciones necesarias, se estima que estará listo a finales del presente año.
                         </p>
                         <div class="proyecto__enlaces">
