last update - project BMS

--- a/index.html
+++ b/index.html
@@ -315,6 +315,11 @@
                         </div>
                     </div>
                     <div class="proyecto animado">
+                        <i class="fa fa-shopping-bag proyecto__icono"></i>
+                        <h3>Punto de Venta</h3>
+                        <p>En conjunto con un amigo, estamos desarrollando un punto de venta, implementando el modelo MVC con ayuda de PHP, mysql, bootstrap, html, css, js, jquery, AJAX. Mi rol principal en este proyecto es realizar el CRUD en algunas secciones del sistema, entender y anilizar como y que es el MVC, asi como llevar a acbo el diseño de algunas secciones del mismo. Actualmente solo tenemos el proyecto en un repositorio en GitHub de manera privada y aun sin ser subido a ningun servidor.</p>
+                    </div>
+                    <div class="proyecto animado">
                         <i class="fa fa-medkit proyecto__icono"></i>
                         <h3>Proyecto "Sistema de control de ventas para Farmacia"</h3>
                         <p>Este proyecto es el más reciente, actualmente se encuentra en desarrollo y de momento se ha realizado alrededor del 30% del mismo. Esta siendo desarrollado con HTML5, CSS, JAVASCRIPT en 
